# now-playing-cards

./: .gitignore  .vercelignore  BUILDING.md  DEPLOYING.md  README.md  example.env  pyproject.toml  requirements.txt  server.py  vercel.json
api/: __init__.py  index.py  models.py  spotify.py  themes.py  utils.py
api/builders/: __init__.py  themes.py  utils.py
api/builders/now_playing/: __init__.py  large.py  medium.py  small.py
api/services/: __init__.py  utils.py
api/services/firestore/: __init__.py  firestore.py
api/services/spotify/: __init__.py  spotify.py
api/static/assets/: cards.webm
api/static/css/: main.css
api/templates/: index.html  success.html
api/templates/cards/: card_large.svg.j2  card_med.svg.j2  card_small.svg.j2
src/: __init__.py  models.py  server.py  themes.py  users.json  utils.py
src/services/: __init__.py  utils.py
src/services/firestore/: __init__.py  firestore.py
src/services/spotify/: __init__.py  spotify.py
src/static/css/: main.css
src/templates/: index.html
static/css/: main.css
templates/: index.html  success.html
